--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-23 18:46:36
+lastsearch = 2024-07-23 20:01:00
 
 [everon.online]
 match = 50.0%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 17.6%%
-title = Bộ ga chun chăn chần bốn mùa Goodnight Mori 4 Chi Tiết
-url = https://vuanem.com/bo-ga-chun-chan-chan-bon-mua-goodnight-mori-4-chi-tiet.html
+match = 5.9%%
+title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -97,9 +97,9 @@ title = Bộ ga chun chần - chăn bốn mùa EVERON bao gồm
 url = https://shopee.vn/Bộ-ga-chun-chần-chăn-bốn-mùa-EVERON-bao-gồm-01-Ga-chun-chần-01-Chăn-bốn-mùa-200*220-02-Vỏ-gối-45*65-esm21012-i.40934475.12629552910
 
 [changagoidemsonghong.com]
-match = 14.7%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+match = -8.8%%
+title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
+url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [tongdailyeveron.com.vn]
 match = -22.2%%
@@ -125,4 +125,9 @@ url = https://archive.org/help/video.php?identifier=jadi-anime-cap-cut-template-
 match = -150.0%%
 title = Bộ chăn ga
 url = https://everon.com/danh-muc-san-pham/bo-chan-ga
+
+[songhong.info]
+match = 2.9%%
+title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
+url = https://songhong.info/chan-ga-goi-bc29
 
