--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-23 16:21:59
+lastsearch = 2024-07-23 20:03:30
 
 [www.dem365.vn]
 match = -81.0%%
@@ -37,9 +37,9 @@ title = Câu cá, ưu và nhược điểm của dùng hạt chặn và dùng ch
 url = https://www.youtube.com/watch?v=47iqz2ImKhc
 
 [www.lazada.vn]
-match = -33.3%%
-title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
+match = -61.9%%
+title = Chăn phao siêu nhẹ, Chăn phao poly siêu nhẹ giá rẻ ...
+url = https://www.lazada.vn/products/chan-phao-sieu-nhe-chan-phao-poly-sieu-nhe-gia-re-sieu-am-chan-chan-gon-chan-phao-chan-bong-chan-phao-sieu-nhe-cotton-poly-cho-mua-dong-khong-lanh-i2027238818.html
 
 [docauquanghuy.com]
 match = -33.3%%
