--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-07-23 15:53:30
+lastsearch = 2024-07-23 20:02:04
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
 url = https://demxanh.com/chieu-truc-den.html
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = -21.4%%
+title = Chiếu trúc 1m8 - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/chiếu/trúc/1m8
 
 [tongkhonem.com]
 match = 57.7%%
