--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-23 18:15:29
+lastsearch = 2024-07-23 20:02:46
 
 [demxanh.com]
-match = -7.1%%
-title = Bộ ga chun Cotton chống thấm màu xanh ngọc
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
+match = -42.9%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = -10.7%%
+title = Bộ ga chun THHome Tencel Micro 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-thhome-tencel-micro-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -39.3%%
-title = Criminology jobs columbus ohio - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--43-6kch9bxbh4f.xn--p1ai/V2EPYSIDs53afe
+match = -25.0%%
+title = Nachthelle movie watch online - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1ac5aidf.xn--p1ai/42316975nhntqxre7dc9v1cfdv4fe36a
 
 [news.google.it]
 match = -3.6%%
@@ -230,4 +230,9 @@ url = https://www.inter-net.ro/external/?url=https://consultantland.ru/6219845fe
 match = -50.0%%
 title = Customer reviews
 url = https://www.amazon.com/product-reviews/B006H7QX7O
+
+[issuu.com]
+match = -17.9%%
+title = Art Guide Australia — March/April 2024
+url = https://issuu.com/artguideaustralia/docs/artguideaustralia_marchapril2024-2
 
