--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-23 17:36:24
+lastsearch = 2024-07-23 20:00:06
 
 [www.gov.uk]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -100.0%%
-title = YouTube
-url = https://www.youtube.com/watch?v=_tpd4v1emkc
+match = -86.7%%
+title = 1 Corinthians 16:13 || Act Like Men
+url = https://www.youtube.com/watch?v=gkX5_aZPBXU
 
 [vietjack.com]
 match = -106.7%%
@@ -1000,4 +1000,9 @@ url = https://www.bowdoin.edu/
 match = -280.0%%
 title = Central Michigan University Athletics - Official Athletics Website
 url = https://cmuchippewas.com/
+
+[goducks.com]
+match = -246.7%%
+title = University of Oregon Athletics - Official Athletics Website
+url = https://goducks.com/
 
