--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-23 16:47:43
+lastsearch = 2024-07-23 19:59:24
 
 [www.diepxuan.com]
-match = 18.8%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+match = -125.0%%
+title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 
 [demxanh.com]
 match = -181.2%%
@@ -27,9 +27,9 @@ title = 2. 1. they made the fire in the traditional way 2. you must ...
 url = https://olm.vn/hoi-dap/tim-kiem?id=253432938837&q=2.+1.+they+made+the+fire+in+the+traditional+way+2.+you+must+collect+four+bottles+of+water+3.+Irving+Berlin+wrote+the+famous+song+"+While+Christmas"+4.+how+do+people+cook+this+kind+of+food?+5.+th...
 
 [shopee.vn]
-match = -137.5%%
-title = Mua sắm online sản phẩm Phụ kiện trẻ em giá tốt
-url = https://shopee.vn/Phụ-kiện-trẻ-em-cat.11036382.11036397
+match = -212.5%%
+title = Trò chơi thẻ để bàn Dream Sleepwalker Tacaro Witt Series ...
+url = https://shopee.vn/Trò-chơi-thẻ-để-bàn-Dream-Sleepwalker-Tacaro-Witt-Series-Warm-Dream-10.6-*-6.2-Phiên-bản-chính-hãng-i.992098593.28954099934
 
 [metric.vn]
 match = -206.2%%
