--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-23 18:12:53
+lastsearch = 2024-07-23 20:05:05
 
 [www.youtube.com]
 match = -40.7%%
@@ -42,14 +42,14 @@ title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
 
 [demxanh.com]
-match = -44.4%%
-title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
-url = https://demxanh.com/chan-ga-goi-olympia.html
+match = -74.1%%
+title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
+url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
-match = -48.1%%
-title = Cách mở chặn, bỏ chặn cuộc gọi đi trên điện thoại ...
-url = https://www.thegioididong.com/hoi-dap/cau-hoi-882159
+match = -55.6%%
+title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
+url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
 
 [dienmaycholon.vn]
 match = -44.4%%
