--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-23 14:15:23
+lastsearch = 2024-07-23 20:35:16
 
 [tiki.vn]
 match = -47.6%%
@@ -17,9 +17,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -42.9%%
-title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
-url = https://www.roc-taiwan.org/vn_vi/post/62.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -88,8 +88,8 @@ url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich
 
 [www.diepxuan.com]
 match = 14.3%%
-title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [znews.vn]
 match = -104.8%%
