--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-23 19:57:46
+lastsearch = 2024-07-23 20:44:31
 
 [demxanh.com]
 match = -41.2%%
@@ -12,19 +12,19 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -141.2%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
+match = -129.4%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [www.lazada.vn]
-match = -135.3%%
-title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
-url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
+match = -94.1%%
+title = Thảm Trải Sàn Nhập Khẩu Bali Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/tham-trai-san-nhap-khau-bali/
 
 [thegioidemviet.vn]
-match = -135.3%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+match = -182.4%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [sammas.vn]
 match = -111.8%%
