--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-23 17:32:43
+lastsearch = 2024-07-23 21:19:39
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
+match = -21.4%%
+title = Bộ ga chun THHome Tencel Micro 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-thhome-tencel-micro-180x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
