--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-23 20:34:02
+lastsearch = 2024-07-23 21:19:06
 
 [xoptraisan.info]
-match = 26.3%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -147.4%%
+title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
+url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamaulac.com.vn]
 match = -78.9%%
@@ -17,9 +17,9 @@ title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
 url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
-match = 5.3%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 26.3%%
+title = Thảm xốp hoạt hình 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [thamht.vn]
 match = 36.8%%
