--- a/images/ruot-nem-korea-150x190x09/config.ini
+++ b/images/ruot-nem-korea-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-150x190x09.html
 lastopen = 2024-06-11 23:30:16
 
 [search]
-lastsearch = 2024-07-23 17:39:24
+lastsearch = 2024-07-23 21:31:21
 
 [www.riotgames.com]
-match = 0.0%%
-title = 
-url = https://www.riotgames.com/en/news/korea-cultural-heritage-protection-project
+match = -84.0%%
+title = Seoul, Korea - Riot Games Global Offices & Job Openings
+url = https://www.riotgames.com/en/work-with-us/offices/seoul
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/Names_of_Korea
 
 [www.youtube.com]
-match = -68.0%%
-title = 🇩🇪 German nee ❌ vs 🇰🇷 Korean 네 ne ✅ | Language Rant pt ...
-url = https://www.youtube.com/watch?v=bUW-Th-vPOw
+match = -64.0%%
+title = EXTENSIVE TOUR OF ALL THE BEST FOOD IN SEOUL ...
+url = https://www.youtube.com/watch?v=VnDxsqL5AuE
 
 [www.diepxuan.com]
 match = 52.0%%
