--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-23 20:01:31
+lastsearch = 2024-07-23 21:36:04
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -72,9 +72,9 @@ title = 6 Drawer Chest TRAPPEDAL Oak/Black - JYSK.vn
 url = https://jysk.vn/en-US/6-drawer-chest-trappedal-oak-black
 
 [blanc.vn]
-match = -81.8%%
-title = Thảm trải sàn Rustic Ghi - có tua rua cotton linen
-url = https://blanc.vn/tham-rustic-ghi-ts
+match = 9.1%%
+title = Thảm trải sàn Hira Be sợi đay
+url = https://blanc.vn/tham-hira-be-ts
 
 [noithatkenli.vn]
 match = -27.3%%
